# lsd_slam

./: .gitignore  README.md  stack.xml
lsd_slam/: CMakeLists.txt  package.xml
lsd_slam_core/: CMakeLists.txt  Makefile  manifest.xml  package.xml
lsd_slam_core/calib/: FOV_examle_calib.cfg  OpenCV_example_calib.cfg  calib.txt  calibVGA.txt  pinhole_example_calib.cfg
lsd_slam_core/cfg/: LSDDebugParams.cfg  LSDParams.cfg
lsd_slam_core/cmake/: FindG2O.cmake  FindSuiteParse.cmake
lsd_slam_core/src/: CMakeLists.txt  GUI.cpp  GUI.h  LSD.cpp  LiveSLAMWrapper.cpp  LiveSLAMWrapper.h  SlamSystem.cpp  SlamSystem.h  main_live_odometry.cpp  main_on_images.cpp  main_opencv.cpp
lsd_slam_core/src/DataStructures/: Frame.cpp  Frame.h  FrameMemory.cpp  FrameMemory.h  FramePoseStruct.cpp  FramePoseStruct.h
lsd_slam_core/src/DepthEstimation/: DepthMap.cpp  DepthMap.h  DepthMapPixelHypothesis.cpp  DepthMapPixelHypothesis.h
lsd_slam_core/src/GlobalMapping/: FabMap.cpp  FabMap.h  KeyFrameGraph.cpp  KeyFrameGraph.h  TrackableKeyFrameSearch.cpp  TrackableKeyFrameSearch.h  g2oTypeSim3Sophus.cpp  g2oTypeSim3Sophus.h
lsd_slam_core/src/IOWrapper/: ImageDisplay.h  InputImageStream.h  NotifyBuffer.h  Output3DWrapper.h  Timestamp.cpp  Timestamp.h  TimestampedObject.h
lsd_slam_core/src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  OpenCVImageStreamThread.cpp  OpenCVImageStreamThread.h  OpenCVOutput3DWrapper.cpp  OpenCVOutput3DWrapper.h
lsd_slam_core/src/IOWrapper/Pangolin/: Keyframe.h  PangolinOutput3DWrapper.cpp  PangolinOutput3DWrapper.h
lsd_slam_core/src/IOWrapper/ROS/: LSDDebugParamsConfig.h  LSDParamsConfig.h  ROSImageStreamThread.cpp  ROSImageStreamThread.h  ROSOutput3DWrapper.cpp  ROSOutput3DWrapper.h  rosReconfigure.h
lsd_slam_core/src/Tracking/: LGSX.h  Relocalizer.cpp  Relocalizer.h  SE3Tracker.cpp  SE3Tracker.h  Sim3Tracker.cpp  Sim3Tracker.h  TrackingReference.cpp  TrackingReference.h  least_squares.cpp  least_squares.h
lsd_slam_core/src/cmake/: FindSuiteParse.cmake
lsd_slam_core/src/util/: EigenCoreInclude.h  IndexThreadReduce.h  Intrinsics.h  Parse.h  RawLogReader.cpp  RawLogReader.h  Resolution.h  SophusUtil.cpp  SophusUtil.h  Stopwatch.h  ThreadMutexObject.h  Undistorter.cpp  Undistorter.h  globalFuncs.cpp  globalFuncs.h  settings.cpp  settings.h
lsd_slam_msgs/: CMakeLists.txt  package.xml
lsd_slam_msgs/msg/: keyframeGraphMsg.msg
lsd_slam_viewer/: CMakeLists.txt  manifest.xml  package.xml
lsd_slam_viewer/cfg/: LSDSLAMViewerParams.cfg
lsd_slam_viewer/cmake/: FindQGLViewer.cmake
lsd_slam_viewer/msg/: keyframeMsg.msg
lsd_slam_viewer/src/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  KeyFrameGraphDisplay.cpp  KeyFrameGraphDisplay.h  PointCloudViewer.cpp  PointCloudViewer.h  main_stitchVideos.cpp  main_viewer.cpp  settings.cpp  settings.h
